force-app/main/default/objects/pse__Generic_Batch_Task_Log__c/pse__Generic_Batch_Task_Log__c.object-meta.xml
<CustomObject>
    <description>Information about PSA Batch Processes.</description>
    <label>Generic Batch Task Log</label>
    <nameField>
        <label>Generic Batch Task Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Generic Batch Task Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>