force-app/main/default/objects/pse__Generic_Batch_Task_Log__c/fields/pse__Generic_Batch_Task__c.field-meta.xml
<CustomField>
    <fullName>pse__Generic_Batch_Task__c</fullName>
    <label>Generic Batch Task Log</label>
    <referenceTo>pse__Generic_Batch_Task__c</referenceTo>
    <relationshipLabel>BatchProcessControlLogs</relationshipLabel>
    <relationshipName>BatchProcessControlLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>